select z-index fixed

--- a/ui/pages/academy/courses/Courses/components/FilterCourse/FilterCourse.module.scss
+++ b/ui/pages/academy/courses/Courses/components/FilterCourse/FilterCourse.module.scss
@@ -22,6 +22,8 @@
     display: flex;
     width: 100%;
     flex-direction: column;
+    position: relative;
+    z-index: 110;
 
     @include devices.device(tablet) {
       flex-direction: row;
